@@ -7,3 +7,5 @@
 20020626 1.16 Install gets default dirs right, &tiview simpler if <3 lines
 20020911 1.17 &choose default dbm is now in ~/.clui_dir & obeys $CLUI_DIR
 20020912 1.17 &choose default dbm handles collisions
+20021008 add &inform; &timestamp export-ok'd
+20030701 1.18 FreeBSD bug corrected ($^O now gives freebsd)
